# eml-semzip

./: .gitignore  CHANGELOG.md  DELIVERY.md  README.md  pyproject.toml
.workbuddy/memory/: 2026-06-18.md  2026-06-19.md
docs/: ARCHITECTURE.md  PRD.md  class-diagram.mermaid  paper.md  sequence-diagram.mermaid
eml_semzip/: .gitignore  README.md  constants.py
eml_semzip/benchmarks/: bench_kb_learning.py  bench_real_kg.py
eml_semzip/cli/: main.py
eml_semzip/coding/: __init__.py  ans_coder.py  sempkt.py  serializer.py
eml_semzip/docs/: TCORE_ASIC_DESIGN.md  paper.md
eml_semzip/io/: report.py
eml_semzip/kb/: __init__.py  auto_learning.py  builtin_kb.py  eml_lite_kb.py
eml_semzip/models/: __init__.py  hyperedge.py  hypergraph.py  node.py
eml_semzip/multimodal/: __init__.py  clip_encoder.py  vit_encoder.py
eml_semzip/pipeline/: __init__.py  compressor.py  decompressor.py  diff_compressor.py  distributed.py  incremental.py  stages.py
eml_semzip/tests/: test_incremental.py
eml_semzip/tests/fixtures/: new_graph.json  old_graph.json
eml_semzip/utils/: __init__.py  cycle_detection.py  isomorphism.py
eml_semzip/web/: __init__.py  server.py
eml_semzip/web/templates/: index.html
tests/: test_cli.py  test_coding.py  test_kb.py  test_models.py  test_pipeline.py
tests/fixtures/: sample_graph.json
